added markdown of ps-1

--- a/MIT_18.650-Fall-2016/ps-1.ipynb
+++ b/MIT_18.650-Fall-2016/ps-1.ipynb
@@ -33,6 +33,8 @@
    "source": [
     "\n",
     " **1. Convergence in Probability**  \n",
+    "\n",
+    "\n",
     "**Definition:**  \n",
     "$ X_n \\xrightarrow{\\text{P}} X $ if for every $ \\epsilon > 0 $,  \n",
     "$$\n",
@@ -51,8 +53,6 @@
     "\\mathbb{P}(|X_n| > \\epsilon) = \\mathbb{P}(X_n = n) = \\frac{1}{n^2} \\to 0 \\quad \\text{as} \\quad n \\to \\infty.  \n",
     "$$  \n",
     "Therefore, $ X_n \\xrightarrow{\\text{P}} 0 $.  \n",
-    "\n",
-    "---\n",
     "\n",
     " **2. Convergence in $ L^2 $ (Mean-Square)**  \n",
     "**Definition:**  \n",
@@ -99,17 +99,11 @@
     "- **Why $ L^2 $ fails**: The rare event $ X_n = n $ (with probability $ \\frac{1}{n^2} $) contributes $ n^2 \\cdot \\frac{1}{n^2} = 1 $ to $ \\mathbb{E}[X_n^2] $, preventing it from vanishing.  \n",
     "- **Probability vs. $ L^2 $**: Convergence in probability does not imply $ L^2 $-convergence, as this example shows.  "
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9d69faf2",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
