--- a/MIT_18.650-Fall-2016/ps-1.ipynb
+++ b/MIT_18.650-Fall-2016/ps-1.ipynb
@@ -11,7 +11,9 @@
   {
    "cell_type": "markdown",
    "id": "fa485c7b",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Problem 1: Convergence of random variables\n",
     "\n",
@@ -98,6 +100,99 @@
     "### **Key Insight**  \n",
     "- **Why $ L^2 $ fails**: The rare event $ X_n = n $ (with probability $ \\frac{1}{n^2} $) contributes $ n^2 \\cdot \\frac{1}{n^2} = 1 $ to $ \\mathbb{E}[X_n^2] $, preventing it from vanishing.  \n",
     "- **Probability vs. $ L^2 $**: Convergence in probability does not imply $ L^2 $-convergence, as this example shows.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16c6d2b6-7583-46e6-95f9-3ae04aa82d5e",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "2. Let $ (X_n)_{n \\in \\mathbb{N}^*} $ be a sequence of i.i.d. Bernoulli random variables with parameter $ p \\in [0, 1] $. For $ n \\in \\mathbb{N}^* $, let  \n",
+    "   $$\n",
+    "   \\bar{X}_n = \\frac{1}{n} \\sum_{i=1}^n X_i\n",
+    "   $$  \n",
+    "   a) What is the distribution of $ n \\bar{X}_n $?  \n",
+    "   b) Prove that $ \\bar{X}_n \\to p $ in $ L^2 $.\n",
+    "\n",
+    "\n",
+    "### Solution to the Problem\n",
+    "\n",
+    "#### **Part (a): Distribution of \\( n \\bar{X}_n \\)**\n",
+    "\n",
+    "Given:\n",
+    "- \\( (X_n)_{n \\in \\mathbb{N}^*} \\) are i.i.d. Bernoulli(\\( p \\)) random variables.\n",
+    "- \\( \\bar{X}_n = \\frac{1}{n} \\sum_{i=1}^n X_i \\).\n",
+    "\n",
+    "We need to find the distribution of \\( n \\bar{X}_n \\).\n",
+    "\n",
+    "1. **Rewrite \\( n \\bar{X}_n \\):**\n",
+    "   \\[\n",
+    "   n \\bar{X}_n = n \\left( \\frac{1}{n} \\sum_{i=1}^n X_i \\right) = \\sum_{i=1}^n X_i.\n",
+    "   \\]\n",
+    "   \n",
+    "2. **Sum of i.i.d. Bernoulli variables:**\n",
+    "   - Each \\( X_i \\sim \\text{Bernoulli}(p) \\).\n",
+    "   - The sum \\( \\sum_{i=1}^n X_i \\) counts the number of successes in \\( n \\) independent trials, each with success probability \\( p \\).\n",
+    "\n",
+    "3. **Conclusion:**\n",
+    "   \\[\n",
+    "   n \\bar{X}_n = \\sum_{i=1}^n X_i \\sim \\text{Binomial}(n, p).\n",
+    "   \\]\n",
+    "\n",
+    "   **Answer:**  \n",
+    "   \\( n \\bar{X}_n \\) follows a **Binomial distribution** with parameters \\( n \\) and \\( p \\), i.e., \\( n \\bar{X}_n \\sim \\text{Binomial}(n, p) \\).\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### **Part (b): Prove \\( \\bar{X}_n \\to p \\) in \\( L^2 \\)**\n",
+    "\n",
+    "We need to show that \\( \\bar{X}_n \\) converges to \\( p \\) in \\( L^2 \\), i.e.,\n",
+    "\\[\n",
+    "\\lim_{n \\to \\infty} \\mathbb{E}\\left[ \\left( \\bar{X}_n - p \\right)^2 \\right] = 0.\n",
+    "\\]\n",
+    "\n",
+    "1. **Compute \\( \\mathbb{E}[\\bar{X}_n] \\):**\n",
+    "   \\[\n",
+    "   \\mathbb{E}[\\bar{X}_n] = \\mathbb{E}\\left[ \\frac{1}{n} \\sum_{i=1}^n X_i \\right] = \\frac{1}{n} \\sum_{i=1}^n \\mathbb{E}[X_i] = \\frac{1}{n} \\cdot n p = p.\n",
+    "   \\]\n",
+    "\n",
+    "2. **Compute \\( \\text{Var}(\\bar{X}_n) \\):**\n",
+    "   \\[\n",
+    "   \\text{Var}(\\bar{X}_n) = \\text{Var}\\left( \\frac{1}{n} \\sum_{i=1}^n X_i \\right) = \\frac{1}{n^2} \\sum_{i=1}^n \\text{Var}(X_i) = \\frac{1}{n^2} \\cdot n p(1 - p) = \\frac{p(1 - p)}{n}.\n",
+    "   \\]\n",
+    "\n",
+    "3. **Express \\( \\mathbb{E}\\left[ \\left( \\bar{X}_n - p \\right)^2 \\right] \\):**\n",
+    "   \\[\n",
+    "   \\mathbb{E}\\left[ \\left( \\bar{X}_n - p \\right)^2 \\right] = \\text{Var}(\\bar{X}_n) + \\left( \\mathbb{E}[\\bar{X}_n] - p \\right)^2 = \\frac{p(1 - p)}{n} + 0 = \\frac{p(1 - p)}{n}.\n",
+    "   \\]\n",
+    "\n",
+    "4. **Take the limit \\( n \\to \\infty \\):**\n",
+    "   \\[\n",
+    "   \\lim_{n \\to \\infty} \\mathbb{E}\\left[ \\left( \\bar{X}_n - p \\right)^2 \\right] = \\lim_{n \\to \\infty} \\frac{p(1 - p)}{n} = 0.\n",
+    "   \\]\n",
+    "\n",
+    "   **Conclusion:**  \n",
+    "   \\( \\bar{X}_n \\) converges to \\( p \\) in \\( L^2 \\).\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Summary of Answers\n",
+    "- **(a)** \\( n \\bar{X}_n \\sim \\text{Binomial}(n, p) \\).\n",
+    "- **(b)** \\( \\bar{X}_n \\to p \\) in \\( L^2 \\) since \\( \\mathbb{E}\\left[ \\left( \\bar{X}_n - p \\right)^2 \\right] = \\frac{p(1 - p)}{n} \\to 0 \\) as \\( n \\to \\infty \\).  \n",
+    "\n",
+    "This shows that the sample mean \\( \\bar{X}_n \\) is an \\( L^2 \\)-consistent estimator of \\( p \\).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6a7d520-4e7e-45ce-9782-6eb4d4bec705",
+   "metadata": {},
+   "source": [
+    "3. For $ n \\in \\mathbb{N}^* $, let $ X_n \\sim \\text{Poisson}(1/n) $.  \n",
+    "   a) Prove that $ X_n \\xrightarrow{\\mathbb{P}} 0 $.  \n",
+    "   b) Prove that $ nX_n \\xrightarrow{\\mathbb{P}} 0 $.\n"
    ]
   },
   {
